--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+                    android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TodoListActivity" />
-        <activity android:name=".ShoppingListActivity" />
-        <activity android:name=".PasswordActivity" />
-        <activity android:name=".TodoActivity"></activity>
+        <activity android:name=".TodoListActivity"
+                    android:screenOrientation="portrait"/>
+        <activity android:name=".ShoppingListActivity"
+                    android:screenOrientation="portrait"/>
+        <activity android:name=".PasswordActivity"
+                    android:screenOrientation="portrait"/>
+        <activity android:name=".TodoActivity"
+                    android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
